--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/beweb_database_v2
+spring.datasource.url = jdbc:mysql://localhost:3306/beweb_database_v2?serverTimezone=UTC
 spring.datasource.username= root
 spring.datasource.password=
 
