--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/beweb_database_v2?serverTimezone=UTC
 spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.password= root
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
