MailConfig Almost Done

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
       "host": "ssl0.ovh.net",
       "port": "587",
       "auth": "true",
-      "starttls.enable" : "true"
+      "starttls" : "true"
     },
     "credentials": {
       "username": "inscriptions@fabrique-beweb.com",
